--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,7 +13,7 @@ html, body {
     height: 100%;
     width: 100%;
     background-image: url('../images/bg-img.png');
-    background-size: contain;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
 }
@@ -28,20 +28,37 @@ html, body {
     background-color: rgba(255,255,255,0.3);
     margin: auto;
     display: flex;
-    /*flex-wrap: wrap;
-    align-items: flex-start;*/
-}
-
-.rows {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cards {
-    //height: 30%;
-    //width: 20%;
+    height: 30%;
+    width: 20%;
     background-color: rgba(0,0,0,0.3);
     margin: 1%;
-    flex: 1;
+}
+
+.pair1 {
+
+}
+
+.pair2 {
+
+}
+
+.pair3 {
+
+}
+
+.pair4 {
+
+}
+
+.pair5 {
+
+}
+
+.pair6 {
+
 }
