--- a/css/index.css
+++ b/css/index.css
@@ -28,4 +28,23 @@ html, body {
   height: 30%;
   width: 20%;
   background-color: rgba(0, 0, 0, 0.3);
-  margin: 1%; }
+  margin: 1% 2%; }
+
+.scoreboard {
+  background-color: rgba(255, 255, 255, 0.3);
+  height: 10%;
+  width: 10%;
+  margin: auto;
+  text-align: center;
+  font-family: Arial;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.player1 > h4, .player2 > h4 {
+  font-size: 1.25vw;
+  margin: auto 0;
+  border-bottom: 2px solid black; }
+
+.player1 > p, .player2 > p {
+  font-size: 2.50vw; }
