--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,7 +36,7 @@ html, body {
     height: 30%;
     width: 20%;
     background-color: rgba(0,0,0,0.3);
-    margin: 1%;
+    margin: 1% 2%;
 }
 
 .pair1 {
@@ -61,4 +61,28 @@ html, body {
 
 .pair6 {
 
+}
+
+.scoreboard {
+    background-color: rgba(255,255,255,0.3);
+    height: 10%;
+    width: 10%;
+    margin: auto;
+    text-align: center;
+    font-family: Arial;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.player1 > h4, .player2 > h4 {
+    //font-size: 1.5em;
+    font-size: 1.25vw;
+    margin: auto 0;
+    border-bottom: 2px solid rgb(0,0,0);
+}
+
+.player1 > p, .player2 > p {
+    //font-size: 3em;
+    font-size: 2.50vw;
 }
