--- a/scss/index.scss
+++ b/scss/index.scss
@@ -16,25 +16,56 @@ html, body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .navigation {
 
 }
 
-.game-container {
-    height: 80%;
+.scoreboard-container {
+    display: flex;
     width: 60%;
+    margin: auto;
+    //border: 5px solid black;
+    justify-content: space-between;
+}
+
+.scoreboard {
+    background-color: rgba(255,255,255,0.3);
+    width: 48%;
+    text-align: center;
+    font-family: Arial;
+    display: flex;
+    justify-content: center;
+}
+
+.player1 > h4, .player2 > h4 {
+    //font-size: 1.5em;
+    font-size: 1.25vw;
+    border-bottom: 2px solid rgb(0,0,0);
+}
+
+.player1 > p, .player2 > p {
+    //font-size: 3em;
+    font-size: 2.50vw;
+}
+
+.game-container {
+    height: 84%;
+    width: 60%;
+    max-width: 1200px;
     background-color: rgba(255,255,255,0.3);
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0.75% 0;
 }
 
 .cards {
     height: 30%;
-    width: 20%;
+    width: 17.5%;
     background-color: rgba(0,0,0,0.3);
     margin: 1% 2%;
 }
@@ -63,26 +94,6 @@ html, body {
 
 }
 
-.scoreboard {
-    background-color: rgba(255,255,255,0.3);
-    height: 10%;
-    width: 10%;
-    margin: auto;
-    text-align: center;
-    font-family: Arial;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+@media only screen and (max-width: 1200px) {
 
-.player1 > h4, .player2 > h4 {
-    //font-size: 1.5em;
-    font-size: 1.25vw;
-    margin: auto 0;
-    border-bottom: 2px solid rgb(0,0,0);
-}
-
-.player1 > p, .player2 > p {
-    //font-size: 3em;
-    font-size: 2.50vw;
 }
