--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ html, body {
 
 .scoreboard {
   background-color: rgba(255, 255, 255, 0.3);
-  width: 48%;
+//width: 48%;
   text-align: center;
   font-family: Arial;
   display: flex;
@@ -51,5 +51,6 @@ html, body {
 .cards {
   height: 30%;
   width: 17.5%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background: url(../images/cardBG.jpg) center center no-repeat;
+  background-size: cover;
   margin: 1% 2%; }
