--- a/css/index.css
+++ b/css/index.css
@@ -13,43 +13,93 @@ html, body {
   background-image: url("../images/bg-img.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  display: flex;
-  flex-wrap: wrap; }
+  display: flex; }
 
 .scoreboard-container {
   display: flex;
-  width: 60%;
+  order: 1;
+  width: 10%;
+  height: 84%;
   margin: auto;
-  justify-content: space-between; }
+  flex-direction: column; }
 
 .scoreboard {
-  background-color: rgba(255, 255, 255, 0.3);
-  width: 48%;
+  width: 100%;
   text-align: center;
-  font-family: Arial;
-  display: flex;
-  justify-content: center; }
+  font-family: 'Open Sans Condensed', sans-serif;
+  margin-bottom: 19%; }
 
 .player1 > h4, .player2 > h4 {
   font-size: 1.25vw;
-  border-bottom: 2px solid black; }
+  font-weight: 300;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 2px; }
 
 .player1 > p, .player2 > p {
-  font-size: 2.50vw; }
+  font-size: 2.50vw;
+  font-weight: 300;
+  background-color: rgba(255, 255, 255, 0.3); }
 
 .game-container {
   height: 84%;
   width: 60%;
   max-width: 1200px;
   background-color: rgba(255, 255, 255, 0.3);
-  margin: auto;
+  margin: auto auto auto 20%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 0.75% 0; }
 
 .cards {
-  height: 30%;
-  width: 17.5%;
+  /*height: 30%;
+    width: 17.5%;*/
+  height: 240px;
+  width: 200px;
   background-color: rgba(0, 0, 0, 0.3);
   margin: 1% 2%; }
+
+@media only screen and (max-width: 1200px) {
+  .container {
+    flex-wrap: wrap; }
+  .scoreboard-container {
+    order: 0;
+    display: flex;
+    width: 80%;
+    height: 12%;
+    margin: auto;
+    justify-content: space-between;
+    flex-direction: row; }
+  .scoreboard {
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 48%;
+    text-align: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0%; }
+  .player1 > h4, .player2 > h4 {
+    font-size: 2vw;
+    font-weight: 300;
+    background: none;
+    margin-bottom: 0px; }
+  .player1 > p, .player2 > p {
+    font-size: 3vw;
+    font-weight: 300;
+    background: none; }
+  .game-container {
+    height: 84%;
+    width: 80%;
+    max-width: 1200px;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0.75% 0; }
+  .cards {
+    /*height: 30%;
+        width: 17.5%;*/
+    height: 220px;
+    width: 180px; } }
