--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,26 @@ html, body {
   background-color: rgba(0, 0, 0, 0.3);
   margin: 1% 2%; }
 
+@media only screen and (max-width: 1600px) {
+  .cards {
+    height: 224px;
+    width: 184px; } }
+
+@media only screen and (max-width: 1500px) {
+  .cards {
+    height: 214px;
+    width: 174px; } }
+
+@media only screen and (max-width: 1400px) {
+  .cards {
+    height: 202px;
+    width: 162px; } }
+
+@media only screen and (max-width: 1300px) {
+  .cards {
+    height: 190px;
+    width: 150px; } }
+
 @media only screen and (max-width: 1200px) {
   .container {
     flex-wrap: wrap; }
@@ -99,7 +119,41 @@ html, body {
     justify-content: center;
     padding: 0.75% 0; }
   .cards {
-    /*height: 30%;
-        width: 17.5%;*/
     height: 220px;
     width: 180px; } }
+
+@media only screen and (max-width: 1080px) {
+  .cards {
+    height: 210px;
+    width: 170px; } }
+
+@media only screen and (max-width: 1030px) {
+  .cards {
+    height: 190px;
+    width: 150px; } }
+
+@media only screen and (max-width: 900px) {
+  .cards {
+    height: 170px;
+    width: 130px; } }
+
+@media only screen and (max-width: 780px) {
+  .cards {
+    height: 150px;
+    width: 110px; } }
+
+@media only screen and (max-width: 768px) {
+  .cards {
+    height: 140px;
+    width: 100px; } }
+
+@media only screen and (max-width: 767px) {
+  .scoreboard-container {
+    height: 6%;
+    flex-direction: column;
+    margin-bottom: 0%; }
+  .scoreboard {
+    width: 100%; }
+  .cards {
+    height: 70px;
+    width: 30px; } }
